--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -502,8 +502,10 @@ div.view div.views-admin-links li a {
  */
 
 #footer {
+  background-color: #222222;
   clear: both;
-  padding: 1.5em 0;
+  margin-top: 5em;
+  padding: 1.5em 0 0 70px;
   position: relative;
 }
 
