--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -54,11 +54,6 @@ fieldset {
   padding: 1em;
 }
 
-table {
-  margin-bottom: 1.5em;
-  width: 100%;
-}
-
 legend {
   margin-bottom: 0;
   width: auto;
@@ -82,6 +77,28 @@ footer {
   text-align: right;
 }
 
+td.uc-discounts-cart-pane-table-cell,
+#cart-form-products td.price,
+#cart-form-products td.total,
+#cart-form-products td.subtotal,
+.cart-review th.price,
+.cart-review td.price,
+.cart-review td.subtotal {
+  text-align: right;
+}
+
+#cart-form-products input,
+#cart-form-products select,
+.address-pane-table input,
+.address-pane-table select {
+  margin-bottom: 0px;
+}
+
+tr.even, tr.odd {
+    background-color: #f3f3f3;
+    border-bottom: 0 none;
+    padding: 0;
+}
 /**
  * 2.LAYOUT
  */
