--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -44,7 +44,7 @@ Equation for font sizing:
  */
 
 body {
-  background-color: #f3f3f3;
+  background-color: #f5f5f5;
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
 
@@ -110,6 +110,14 @@ td.active {
 
 div.category-grid-products .table tbody tr:hover td, .table tbody tr:hover th {
   background-color: #ffffff;
+}
+
+.order-review-table .pane-title-row td:hover {
+  background-color: #dddddd;
+}
+
+.order-review-table .table td[nowrap] {
+  text-align: right;
 }
 
 /**
