--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -139,6 +139,11 @@ div.error {
     background-color: #ffffff;
 }
 
+/* fix checkbox offset at admin/build/modules */
+#system-modules .checkbox input[type="checkbox"] {
+  margin-left: 0px
+}
+
 /**
  * 2.LAYOUT
  */
