[theme] add some css for gravatar positioning in comments

--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -159,6 +159,12 @@ h6.submitted {
   margin-bottom: 1em;
 }
 
+/* align the user picture accompanying the comment */
+article.comment .picture {
+  float: left;
+  margin: -4px 0.5em 0 0;
+}
+
 /**
  * 2.LAYOUT
  */
