--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -165,6 +165,20 @@ article.comment .picture {
   margin: -4px 0.5em 0 0;
 }
 
+/* theme icons in the nav-bar */
+.navbar .icon > li a {
+  font-size: 20px;
+  padding: 9px 0 0 9px;
+}
+
+.navbar a#cart {
+  color: #5bc0de;
+}
+
+.navbar a#cart:hover {
+  color: #ffffff;
+}
+
 /**
  * 2.LAYOUT
  */
