--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -186,15 +186,19 @@ article.comment .picture {
 }
 
 /* install page */
+#install-step .well {
+  border: 1px solid rgba(0, 0, 0, 0.15);
+}
+
 #install-step img {
   float: left;
-  padding-right: 19px
+  padding-right: 19px;
 }
 
 #install-download a {
   width: 770px;
   font-size: 18px;
-  margin-bottom: 20px
+  margin-bottom: 20px;
 }
 
 /**
