--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -37,7 +37,7 @@ Equation for font sizing:
  * 0.BOOTSTRAP
  */
 
-@import "css/bootstrap.css";
+@import "css/bootstrap.min.css";
 
 /**
  * 1.OVERRIDES
@@ -163,6 +163,11 @@ h6.submitted {
 article.comment .picture {
   float: left;
   margin: 3px 0.5em 0 0;
+}
+
+/* alter navbar brand padding */
+.navbar .brand {
+  padding: 8px 20px 6px;
 }
 
 /* theme icons in the nav-bar */
