--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -509,7 +509,7 @@ div.view div.views-admin-links li a {
   background-color: #f5f5f5;
   clear: both;
   margin-top: 5em;
-  padding: 1.5em 0 0 70px;
+  padding: 1.5em 0 0 0;
   position: relative;
   text-align: left;
 }
