--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -229,13 +229,17 @@ article.comment .picture {
   float: left;
   width: 50px;
   height: 50px;
-  margin: 0 6px 6px 0;
+  margin: 0 5px 6px 1px;
 }
 
 #fluksonians div.avatar.grey-out {
   opacity: 0.4;
   filter: alpha(opacity=40); /* msie */
   background-color: #000;
+}
+
+#fluksonian-ctrl {
+  margin-top: 5px;
 }
 
 /**
