[theme] forgot to https the Droid Sans bold resource

--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -56,7 +56,7 @@ Equation for font sizing:
   font-family: 'Droid Sans';
   font-style: normal;
   font-weight: bold;
-  src: local('Droid Sans Bold'), local('DroidSans-Bold'), url('http://themes.googleusercontent.com/static/fonts/droidsans/v3/EFpQQyG9GqCrobXxL-KRMQFhaRv2pGgT5Kf0An0s4MM.woff') format('woff');
+  src: local('Droid Sans Bold'), local('DroidSans-Bold'), url('https://themes.googleusercontent.com/static/fonts/droidsans/v3/EFpQQyG9GqCrobXxL-KRMQFhaRv2pGgT5Kf0An0s4MM.woff') format('woff');
 }
 
 body {
