--- a/drupal/themes/framework/style.css
+++ b/drupal/themes/framework/style.css
@@ -69,6 +69,33 @@ body {
   padding-top: 90px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
 
+body.page-about {
+  background-image: url('/sites/all/themes/framework/img/rock.jpg');
+  background-position: center;
+  background-size: cover;
+  color: white;
+}
+
+.hero {
+  margin-top: 120px;
+  margin-bottom: 120px;
+  text-align: center;
+}
+
+.hero p#tag {
+  margin-top: 12px;
+  margin-bottom: 60px; 
+  font-size: 42px;
+}
+
+.hero p {
+  font-size: 24px;
+}
+
+.opts h2 {
+  font-weight: initial;
+}
+
 p {
   margin: 0 0 9px;
   font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -598,7 +625,7 @@ div.view div.views-admin-links li a {
  */
 
 #footer {
-  background-color: #f5f5f5;
+  background-color: transparent;
   clear: both;
   margin-top: 5em;
   padding: 1.5em 0 0 0;
